# chibivue

./: .editorconfig  .eslintcache  .eslintrc.cjs  .gitignore  .prettierignore  .textlintrc.json  Makefile  README.md  build.ts  changelog.config.cjs  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.dts.config.js  tsconfig.build.json  tsconfig.json  vite.config.js  vitest.config.ts
.github/: FUNDING.yml  contributing.md
.github/workflows/: check.yml  deploy.yml
.husky/: commit-msg
_books/english/: 04_setup_project.md  05_create_app_api.md
_books/japanese/: 001_about.md  006_simple_h_function.md  007_minimum_reactive.md  010_minimum_template_compiler.md  120_bvd_scheduler.md  510_bsc_define_props.md
_books/tools/translator/: Cargo.toml
book/: milestones.md
book/images/: c1c2map_deleted.drawio  dir_ast.drawio  reactive.drawio
book/online-book/: index.md
books/: index.md
books/.vitepress/: config.mts
books/english/: 01_about.md  02_what_is_vue.md  03_vue_core_components.md  04_setup_project.md  05_create_app_api.md
books/images/: c1c2map.drawio  c1c2map_inserted.drawio  c1c2map_inserted_correct.drawio  me_template_compiler_design.drawio  reactive_observer.drawio  reactivity_create.drawio
books/japanese/: 001_about.md  002_what_is_vue.md  003_vue_core_components.md  004_setup_project.md  005_create_app_api.md  006_simple_h_function.md  007_minimum_reactive.md  014_break.md  (+82 more)
example/: deno.json  index.html  luath.config.ts
rules/: prh-punctuation-mark.yml
src/: index.ts  lifecycle.ts
vite-plugin/: index.ts  main.ts
(+548 files in other folders)
