[package]
name = "translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
glob = "0.3.0"
chatgpt_rs = "1.1.4"
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0.44"
